2.1.5 dev

 * Fixed error in validation of eventregistrations when reselecting frozen options.

2.1.4

 * Fixed logical error in calculating invoice state.

2.1.3

 * Fixed error when displaying statistics for attendee selections.

2.1.2

 * Fixed error in internal naming of function for Options.

2.1.1

 * Improved performance for the option administration page.

2.1.0

 * Added invoice page to eventregistration.
 * Various bugfixes and improvements to services plugins.
 * Fixed some missing language files for eventregistration.

2.0.0

 * Added sorting users by age.
 * Removed booking module.
 * Restructured modules into clients, data and viewhelpers.
 * Added option to display change and registration confirmations for events.
 * Added support for invoices.
 * Added suboptions.
 * Improved eventadmin
   - View pending payments
   - Change selections
   - Pay invoices
   - Add notes to events
 * Option validation more flexible by validating optiongroups separatly
 * Added missing language file
 * More flexible rendering of forms
 * Added internal API structure (initially implementing functions for single sign-on systems)
 * Added various SSO plugins for services
   - Concrete 5
   - phpbb3

1.1.0

 * Improved options.
 * Added max attendees to events.

1.0.0

 * Renamed registration to quickregistration.
 * Removed RegistrationProfile model from quickregistration.
 * A lot of refactoring!

0.0.0 Chi